--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.google.android.gms:play-services-gcm:7.3.0'
-    compile files('libs/libDaumMapAndroid.jar')
+    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
 }
