--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
         <activity
             android:name=".DetailActivity"
             android:label="@string/title_activity_detail"
-            android:theme="@android:style/Theme.Translucent">
+            android:theme="@style/Theme.AppCompat.Translucent">
         </activity>
     </application>
 
