--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ssomcompany.ssomclient" >
 
+
+
+    <permission
+        android:name="com.ssomcompany.ssomclient.locationapi.maps.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.ssomcompany.ssomclient.locationapi.maps.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="com.google.android.c2dm.permission.REGISTER" />
-    <uses-permission android:name="com.ssomcompany.ssomclient.permission.C2D_MESSAGE" />
 
+    <uses-permission android:name="com.ssomcompany.ssomclient.permission.C2D_MESSAGE" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,6 +29,7 @@
         android:theme="@style/AppTheme"
         android:windowActionBar="false"
         android:windowNoTitle="true" >
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBYMCAFKH4mLDTrkuGNslY0ccEHPLjgRAc"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
