--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
     <uses-permission android:name="com.google.android.c2dm.permission.REGISTER" />
 
     <uses-permission android:name="com.ssomcompany.ssomclient.permission.C2D_MESSAGE" />
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
