--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.0"
+    compileSdkVersion 22
+    buildToolsVersion '22.0.1'
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/NOTICE'
@@ -11,7 +11,7 @@ android {
     defaultConfig {
         applicationId "com.ssomcompany.ssomclient"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -25,11 +25,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.android.gms:play-services-gcm:7.3.0'
     compile 'com.google.android.gms:play-services:8.1.0'
-    compile 'com.android.support:support-v4:23.0.1'
-    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
-    compile "org.apache.httpcomponents:httpmime:4.3.1"
+    compile 'com.android.support:support-v4:22.2.1'
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    compile 'org.apache.httpcomponents:httpmime:4.3.1'
     compile 'com.google.code.gson:gson:2.2.4'
 }
