UI & platform change

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+
+    }
     compileSdkVersion 22
     buildToolsVersion '22.0.1'
     packagingOptions {
@@ -10,8 +13,8 @@ android {
     }
     defaultConfig {
         applicationId "com.ssomcompany.ssomclient"
-        minSdkVersion 14
-        targetSdkVersion 21
+        minSdkVersion 16
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
