--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         android:windowNoTitle="true" >
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/map_debug_key"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name" >
         </activity>
 
@@ -69,7 +69,7 @@
         </service>
 
         <activity
-            android:name=".Intro2Activity"
+            android:name=".activity.Intro2Activity"
             android:label="@string/title_activity_intro2" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
