add git ignore & location changed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ssomcompany.ssomclient" >
 
-    <meta-data
-        android:name="com.google.android.maps.v2.API_KEY"
-        android:value="AIzaSyDxR79-ULr-XbTxy4Ms8b2xU0gPTafAut0" />
+    <!--<meta-data-->
+        <!--android:name="com.google.android.maps.v2.API_KEY"-->
+        <!--android:value="@string/map_debug_key" />-->
 
     <permission
         android:name="com.ssomcompany.ssomclient.locationapi.maps.permission.MAPS_RECEIVE"
@@ -35,7 +35,9 @@
         android:theme="@style/AppTheme"
         android:windowActionBar="false"
         android:windowNoTitle="true" >
+
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/map_debug_key"/>
+
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
