--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ssomcompany.ssomclient" >
 
-    <!--<meta-data-->
-        <!--android:name="com.google.android.maps.v2.API_KEY"-->
-        <!--android:value="@string/map_debug_key" />-->
-
     <permission
         android:name="com.ssomcompany.ssomclient.locationapi.maps.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
@@ -28,6 +24,7 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -36,7 +33,10 @@
         android:windowActionBar="false"
         android:windowNoTitle="true" >
 
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/map_debug_key"/>
+        <!--<meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/map_debug_key"/>-->
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/map_debug_key" />
 
         <activity
             android:name=".activity.MainActivity"
