--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,26 @@
 apply plugin: 'com.android.application'
 
-android {
-    signingConfigs {
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.android.support:support-v4:23.2.0'
+    compile 'org.apache.httpcomponents:httpclient:4.5'
+    compile 'org.apache.httpcomponents:httpmime:4.3.1'
+    compile 'com.google.code.gson:gson:2.4'
+}
 
-    }
+android {
     compileSdkVersion 22
     buildToolsVersion '22.0.1'
+
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/LICENSE'
     }
+
     defaultConfig {
         applicationId "com.ssomcompany.ssomclient"
         minSdkVersion 16
@@ -18,24 +28,27 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    signingConfigs {
+        debug {
+            storeFile file('C:/Users/SDS/.android/debug.keystore')
+        }
+        release {
+            storeFile file('C:/Users/SDS/.android/ssom.keystore')
+            keyAlias "ssom"
+            storePassword "123qwe"
+            keyPassword "123qwe"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     dexOptions {
         jumboMode = true
     }
-}
-
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.google.android.gms:play-services-gcm:7.3.0'
-    compile 'com.google.android.gms:play-services:8.1.0'
-    compile 'com.android.support:support-v4:22.0.0'
-    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
-    compile 'org.apache.httpcomponents:httpmime:4.3.1'
-    compile 'com.google.code.gson:gson:2.2.4'
 }
