--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,9 +38,13 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/map_debug_key" />
 
-        <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/app_name" >
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.SsomWriteActivity" />
+        <activity android:name=".activity.IntroActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <receiver
@@ -70,19 +74,6 @@
             </intent-filter>
         </service>
 
-        <activity
-            android:name=".activity.Intro2Activity"
-            android:label="@string/title_activity_intro2" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".post.WriteActivity"
-            android:label="@string/title_activity_write" >
-        </activity>
     </application>
 
 </manifest>
