--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,9 +41,9 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/map_debug_key" />
 
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.SsomWriteActivity" />
-        <activity android:name=".activity.IntroActivity" >
+        <activity android:name=".activity.MainActivity" android:launchMode="singleTop"/>
+        <activity android:name=".activity.SsomWriteActivity" android:launchMode="singleTop"/>
+        <activity android:name=".activity.IntroActivity" android:launchMode="singleTop" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
