--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,14 +42,26 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/map_debug_key" />
 
-        <activity android:name=".activity.MainActivity" android:launchMode="singleTop"/>
-        <activity android:name=".activity.SsomWriteActivity" android:launchMode="singleTop"/>
-        <activity android:name=".activity.IntroActivity" android:launchMode="singleTop" >
+        <activity android:name=".activity.IntroActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activity.MainActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".activity.SsomWriteActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".activity.SsomChattingActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
 
         <receiver
             android:name=".push.PushReceiver"
