api 전부 추가, 기능동작 연계, 로그인 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/FullScreenTheme"/>
 
+        <activity android:name=".activity.SsomLoginBaseActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Translucent"/>
+
         <receiver
             android:name=".push.PushReceiver"
             android:enabled="true"
