--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
     <uses-permission android:name="com.ssomcompany.ssomclient.locationapi.maps.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -53,14 +52,19 @@
 
         <activity android:name=".activity.MainActivity"
             android:exported="false"
+            android:launchMode="singleTop"
+            android:alwaysRetainTaskState="true"
             android:screenOrientation="portrait"/>
 
         <activity android:name=".activity.SsomWriteActivity"
             android:exported="false"
+            android:windowSoftInputMode="adjustPan"
+            android:configChanges="keyboardHidden|screenSize"
             android:screenOrientation="portrait"/>
 
         <activity android:name=".activity.SsomChattingActivity"
             android:exported="false"
+            android:configChanges="keyboardHidden|screenSize"
             android:screenOrientation="portrait"/>
 
         <activity android:name=".activity.SsomChattingGuideActivity"
@@ -71,6 +75,8 @@
         <activity android:name=".activity.SsomLoginBaseActivity"
             android:exported="false"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            android:configChanges="keyboardHidden|screenSize"
             android:theme="@style/Theme.AppCompat.Translucent"/>
 
         <receiver
