[기능 버그 수정] 트렐로 버그 수정 및 개선사항 추가 - 기본적인 기능 동작 테스트 완료 - 리스트 로딩 중 탭 변경 못하게 막음 - 글 등록 하나만 할 수 있게 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,10 +64,16 @@
 
         <activity android:name=".activity.SsomChattingActivity"
             android:exported="false"
+            android:windowSoftInputMode="adjustResize"
             android:configChanges="keyboardHidden|screenSize"
             android:screenOrientation="portrait"/>
 
         <activity android:name=".activity.SsomChattingGuideActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/FullScreenTheme"/>
+
+        <activity android:name=".activity.SsomImageDetailActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/FullScreenTheme"/>
