--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,17 +2,27 @@ apply plugin: 'com.android.application'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.google.android.gms:play-services:8.3.0'
-    compile 'com.android.support:support-v4:22.0.0'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:support-v4:23.0.1'
+//    compile 'com.android.support:design:24.2.0'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'org.apache.httpcomponents:httpmime:4.3.1'
     compile 'com.google.code.gson:gson:2.4'
+
+    // for one signal
+    compile 'com.onesignal:OneSignal:3.0.0'
+    // Required for OneSignal, even if you have added FCM.
+    compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    // Required for geotagging
+    compile "com.google.android.gms:play-services-location:9.4.0"
+    compile "com.google.android.gms:play-services-maps:9.4.0"
+//    compile 'com.google.android.gms:play-services:9.4.0'
 }
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '22.0.1'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.3'
+    useLibrary('org.apache.http.legacy')
 
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
@@ -23,21 +33,27 @@ android {
     defaultConfig {
         applicationId "com.ssomcompany.ssomclient"
         minSdkVersion 19
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        // for one signal
+        manifestPlaceholders = [manifestApplicationId: "${applicationId}",
+                                onesignal_app_id: "b0c678d6-45d3-4868-96bd-2e28f0340e10",
+                                onesignal_google_project_number: "189266416861"]
     }
 
     signingConfigs {
         debug {
-            storeFile file('C:/Users/SDS/.android/debug.keystore')
+//            storeFile file('C:/Users/SDS/.android/debug.keystore')
+            storeFile file('/Users/AaronMac/.android/debug.keystore')
         }
-        release {
-            storeFile file('C:/Users/SDS/.android/ssom.keystore')
-            keyAlias "ssom"
-            storePassword "123qwe"
-            keyPassword "123qwe"
-        }
+//        release {
+//            storeFile file('C:/Users/SDS/.android/ssom.keystore')
+//            keyAlias "ssom"
+//            storePassword "123qwe"
+//            keyPassword "123qwe"
+//        }
     }
 
     buildTypes {
