--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <uses-permission android:name="com.ssomcompany.ssomclient.locationapi.maps.permission.MAPS_RECEIVE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -66,6 +65,11 @@
             android:exported="false"
             android:windowSoftInputMode="adjustResize"
             android:configChanges="keyboardHidden|screenSize"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".activity.SsomTodayProfileActivity"
+            android:exported="false"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
 
         <activity android:name=".activity.SsomChattingGuideActivity"
