[login] 로그인 관련 동작 개선 - 로그인 화면 변경 - 페북 로그인 등록 - 로그인시에만 올사 등록으로 변경 - 이미지 업로드 네트워크 로직 불안정.. 개선요망 - 내 채팅이미지 배경이 검정 테두리로 보이게 변경

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
     buildToolsVersion '23.0.3'
     useLibrary('org.apache.http.legacy')
 
+    repositories {
+        mavenCentral()
+    }
+
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/NOTICE'
