--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,11 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/map_debug_key" />
 
+        <!-- face book app id -->
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
+        <!-- this is for one signal -->
+        <meta-data android:name="com.onesignal.NotificationOpened.DEFAULT" android:value="DISABLE" />
 
         <activity android:name=".activity.IntroActivity"
             android:launchMode="singleTop"
