[대거 수정] 아 몰랑 수정한거 많음

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,6 +84,11 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".activity.HeartStoreActivity"
+            android:exported="false"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+
         <activity android:name=".activity.SsomChattingGuideActivity"
             android:exported="false"
             android:screenOrientation="portrait"
