--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:support-v4:23.0.1'
 //    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.volley:volley:1.+'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'org.apache.httpcomponents:httpmime:4.3.1'
     compile 'com.google.code.gson:gson:2.4'
