--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'com.android.application'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:support-v4:23.0.1'
-//    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.android.support:design:25.0.0'
     compile 'com.android.volley:volley:1.+'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'org.apache.httpcomponents:httpmime:4.3.1'
@@ -14,8 +14,6 @@ dependencies {
     compile 'com.jakewharton:disklrucache:2.0.2'
     // for one signal
     compile 'com.onesignal:OneSignal:3.+@aar'
-    // for facebook login
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
     // Required for OneSignal, even if you have added FCM.
     compile 'com.google.android.gms:play-services-gcm:9.4.0'
     // Required for geotagging
