--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,29 +2,34 @@ apply plugin: 'com.android.application'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:support-v4:25.0.0'
-    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:support-v4:25.3.0'
+    compile 'com.android.support:design:25.3.0'
     compile 'com.android.volley:volley:1.+'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'org.apache.httpcomponents:httpmime:4.3.1'
-    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.google.code.gson:gson:2.7'
 
     // for disk cache
     compile 'com.jakewharton:disklrucache:2.0.2'
     // for one signal
     compile 'com.onesignal:OneSignal:3.+@aar'
     // Required for OneSignal, even if you have added FCM.
-    compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    compile 'com.google.android.gms:play-services-gcm:10.2.1'
     // Required for geotagging
-    compile "com.google.android.gms:play-services-location:9.4.0"
-    compile "com.google.android.gms:play-services-maps:9.4.0"
+    compile "com.google.android.gms:play-services-location:10.2.1"
+    compile "com.google.android.gms:play-services-maps:10.2.1"
 //    compile 'com.google.android.gms:play-services:9.4.0'
+
+    // developer tools stetho for using chrome devTools
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
+    compile 'com.facebook.stetho:stetho-okhttp:1.4.2'
+    compile 'com.facebook.stetho:stetho:1.4.2'
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.3'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
     useLibrary('org.apache.http.legacy')
 
     repositories {
@@ -40,7 +45,7 @@ android {
     defaultConfig {
         applicationId "com.ssomcompany.ssomclient"
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 115
         versionName "1.1.5"
 
