--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,15 @@ dependencies {
     // Required for geotagging
     compile "com.google.android.gms:play-services-location:10.2.1"
     compile "com.google.android.gms:play-services-maps:10.2.1"
-//    compile 'com.google.android.gms:play-services:9.4.0'
 
     // developer tools stetho for using chrome devTools
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.facebook.stetho:stetho-okhttp:1.4.2'
     compile 'com.facebook.stetho:stetho:1.4.2'
+
+    // this is for image loading (glide)
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.2'
 }
 
 android {
@@ -57,7 +60,8 @@ android {
 
     signingConfigs {
         debug {
-            storeFile file('/Users/AaronMac/.android/debug.keystore')
+//            storeFile file('/Users/AaronMac/.android/debug.keystore')
+            storeFile file('C:/Users/SDS/.android/debug.keystore')
         }
         release {
             storeFile file('/Users/AaronMac/ssomcompany.keystore')
