--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,11 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/map_debug_key" />
 
+        <!-- fabric API key -->
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="0671c24cee8376012e7ca9a7041251b146da0a53" />
+
         <!-- face book app id -->
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
