--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.ssomcompany.ssomclient" >
-
-    <permission
-        android:name="com.ssomcompany.ssomclient.locationapi.maps.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature" />
 
     <!-- internet permission -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,8 +8,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <!--for in app purchase-->
     <uses-permission android:name="com.android.vending.BILLING" />
-    <!--for google map-->
-    <uses-permission android:name="com.ssomcompany.ssomclient.locationapi.maps.permission.MAPS_RECEIVE" />
     <!--to access storage-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!--to access location-->
@@ -42,18 +35,13 @@
         android:windowActionBar="false"
         android:windowNoTitle="true" >
 
-        <!--<meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/map_debug_key"/>-->
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/map_debug_key" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="@string/map_debug_key"/>
 
         <!-- fabric API key -->
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="0671c24cee8376012e7ca9a7041251b146da0a53" />
-
-        <!-- face book app id -->
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
         <!-- this is for one signal -->
         <meta-data android:name="com.onesignal.NotificationOpened.DEFAULT" android:value="DISABLE" />
