--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <!--for in app purchase-->
-    <uses-permission android:name="com.android.vending.BILLING" />
+    <!--for one store in app purchase-->
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <!--to access storage-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!--to access location-->
@@ -35,6 +36,7 @@
         android:windowActionBar="false"
         android:windowNoTitle="true" >
 
+        <!-- google map -->
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_debug_key"/>
 
@@ -46,6 +48,9 @@
         <!-- this is for one signal -->
         <meta-data android:name="com.onesignal.NotificationOpened.DEFAULT" android:value="DISABLE" />
         <meta-data android:name="com.onesignal.BadgeCount" android:value="DISABLE" />
+
+        <!-- one store purchase -->
+        <meta-data android:name="iap:api_version" android:value="3" />
 
         <activity android:name=".activity.IntroActivity"
             android:launchMode="singleTop"
@@ -93,6 +98,12 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/FullScreenTheme"/>
+
+        <activity
+            android:name="com.skplanet.dodo.IapWeb"
+            android:configChanges="orientation|screenSize|keyboardHidden|locale|layoutDirection"
+            android:excludeFromRecents="true"
+            android:windowSoftInputMode="stateHidden" />
 
     </application>
 
