--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--for in app purchase-->
+    <uses-permission android:name="com.android.vending.BILLING" />
     <!--to access storage-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!--to access location-->
